--- a/stancon2023/stancon2023.tex
+++ b/stancon2023/stancon2023.tex
@@ -741,5 +741,13 @@ $$
   \end{subitemize}
 \end{itemize}
 
+\sld{More work in progress}
+\begin{itemize}
+\item score-function based \myemph{control variates}
+\item \myemph{amortized variational inference} (BRMS)
+\item \myemph{black-box nested Laplace} approximation
+\item low-dimensionsional (1--2), massively \myemph{scalable Gaussian processes}
+\end{itemize}
+
 
 \end{document}
